# rainy-morph

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt  animate_morphing.cpp  enumerate_knots.cpp
geom_helpers/: CMakeLists.txt  bones.cpp  compare.cpp  io.cpp  knots.cpp  split.cpp
include/geom_helpers/: bones.h  circle.h  compare.h  knots.h  knots_io.h  null_shape.h  point_io.h  rectangle.h  split.h
include/morphing/: morphing.h
morphing/: CMakeLists.txt  morphing.cpp
tests/: CMakeLists.txt  bones.cpp  convert.cpp  morph.cpp
